# tcc-vibration-prediction

./: .gitignore  CLAUDE.md  README.md  create_methodology_plots.py  methodology.md  notebook_analysis.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
modularized_code/: CHECKPOINT.md  README.md  requirements.txt
modularized_code/scripts/: README.md  run_complete_pipeline.py  run_data_pipeline.py
modularized_code/src/: __init__.py
modularized_code/src/config/: __init__.py  model_config.py  settings.py
modularized_code/src/data/: __init__.py  cleaner.py  loader.py  preprocessor.py
modularized_code/src/evaluation/: __init__.py  analyzer.py  enhanced_plotter.py  methodology_plotter.py  metrics.py  validator.py  visualizer.py
modularized_code/src/features/: __init__.py  engineer.py  importance.py  selector.py
modularized_code/src/models/: __init__.py  base.py  registry.py  trainer.py
modularized_code/src/pipeline/: __init__.py  data_pipeline.py  ml_pipeline.py  orchestrator.py
modularized_code/src/utils/: __init__.py  helpers.py  plotting.py
pipeline_outputs/: complete_results.json  execution_log.txt  executive_report.json
pipeline_outputs/data_pipeline/: pipeline_state.pkl  pipeline_summary.json  selected_features.json
pipeline_outputs/ml_pipeline/: business_insights.json  evaluation_results.json  model_recommendation.json  pipeline_metadata.json  validation_results.json
tcc_writing/latex/: documento.aux  documento.bbl  documento.blg  documento.fdb_latexmk  documento.fls  documento.glo  documento.idx  documento.ilg  documento.ind  documento.ist  documento.lof  documento.lot  documento.tex  documento.toc
tcc_writing/latex/2-textuais/: 1-introducao.tex  2-fundamentacao-teorica.tex  3-metodologia.tex  4-resultados.tex  trabalhos-relacionados.tex
tcc_writing/latex/3-pos-textuais/: referencias.bib
tcc_writing/latex/3-pos-textuais/apendices/: apendice-a.tex
tcc_writing/partitioned_notebook/: 1-libraries_and_functions.ipynb  2-collect_and_clean_data.ipynb  3-eda.ipynb  4-feature_engineering.ipynb  5-feature_importance.ipynb  6-feature_selection.ipynb  7-model_training.ipynb  8-evaluation.ipynb  9-extra_visualizations.ipynb
